# daily-news

./: Cargo.toml  main.go
src/: lib.rs  main.rs
src/models/: cache.rs  cfg.rs  city.rs  mod.rs  news.rs  place.rs  weather.rs  weather_response.rs
src/services/: mod.rs  place.rs  weather.rs
src/utils/: alphabet.rs  mod.rs  urls.rs
