[package]
name = "daily-news"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
colored = "2.0"
nanoid = "0.4"
dirs = "5.0"
clap = "4.5.23"
comfy-table = "7.1.3"
serde_urlencoded = "0.7.1"
